<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    tools:showIn="@layout/activity_add">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/pln"
            android:layout_width="68dp"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/charge"
            android:gravity="center"
            android:text="@string/PLN"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/charge"
            android:layout_width="287dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:hint="@string/charge"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="24sp"
            android:textStyle="normal|bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="173dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/comments"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="20dp" />

        <EditText
            android:id="@+id/receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/receiver"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="24sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="405dp"
        android:layout_height="66dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tvdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/date"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/term"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/tvdate"
            android:text="@string/term"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <RadioButton
                android:id="@+id/repeatPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="ableHowManyTimesPayment"
                android:paddingRight="40dp"
                android:text="@string/isRepeated" />

            <RadioButton
                android:id="@+id/noRepeatPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="disableHowManyTimesPayment"
                android:text="@string/isNoRepeated" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="407dp"
        android:layout_height="70dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

        <EditText
            android:id="@+id/day"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:layout_toStartOf="@+id/repeats"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/repeats"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:entries="@array/periodically"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="428dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/row1LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/Anuluj"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#ff050d"
            android:lines="2"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15dp" />

        <Button
            android:id="@+id/accept"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#2e840e"
            android:enabled="false"
            android:lines="2"
            android:onClick="accept"
            android:text="@string/accept"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimaryLight"
        android:importantForAutofill="no"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6">

        <TextView
            android:id="@+id/adnotation"
            android:layout_width="388dp"
            android:layout_height="34dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/information"
            android:textSize="16dp">

        </TextView>

        <Spinner
            android:id="@+id/howManyTimes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:entries="@array/howManyTimes"
            android:textSize="24sp">

        </Spinner>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
