<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/receiver_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/receiver_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver_row"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/receiver_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/receiver_label"
                android:text="test"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/charge_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/receiver_layout">

            <TextView
                android:id="@+id/charge_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/charge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/receiver_label"
                android:text="test"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/charge_layout">

            <TextView
                android:id="@+id/data_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateOfPayment"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/receiver_label"
                android:text="test"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comments_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/data_layout">

            <TextView
                android:id="@+id/comments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comments_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/receiver_label"
                android:text="test"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
